Fix content cut off and ActionHeader styling

--- a/frontend/src/components/ActionHeader.css
+++ b/frontend/src/components/ActionHeader.css
@@ -30,12 +30,27 @@
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
-.header-text{
+.funter {
+  color: white;
+  margin: 0 5%;
+}
+
+.slogan {
+  font-size: 2.25em;
+  color: white;
+  margin: 5%;
+}
+
+.header-text {
   text-align: center;
 }
 
-@media only screen and (max-width: 850px){
-  .header-text{
+.content {
+  padding: 1rem 0 5rem 0;
+}
+
+@media only screen and (max-width: 850px) {
+  .header-text {
     font-size: 40px;
     text-align: center;
   }
@@ -51,8 +66,8 @@
   }
 }
 
-@media only screen and (max-width: 690px){
-  .header-text{
+@media only screen and (max-width: 690px) {
+  .header-text {
     font-size: 30px;
     text-align: center;
   }
